--- a/src/localizations/configs/English.json
+++ b/src/localizations/configs/English.json
@@ -35,24 +35,29 @@
       "sub": {
         "add": {
           "name": "add",
-          "description": "Create ,a translation join between two channels.",
-          "success": "Created a translation join: \uD83C\uDF10 <#${source}> → ${language} <#${target}>.",
+          "description": "Create ,a translation joint between two channels.",
+          "success": "Created a translation joint: \uD83C\uDF10 <#${source}> → ${language} <#${target}>.",
           "errors": {
-            "alreadyExists": "A translation join with the same settings already exists.",
+            "alreadyExists": "A translation joint with the same settings already exists.",
             "differentGuilds": "The source and target channels must be in the same guild."
           }
         },
         "remove": {
           "name": "remove",
           "description": "Remove a replica.",
-            "success": "Removed the translation join: \uD83C\uDF10 <#${source}> → ${language} <#${target}>."
+            "success": "Removed the translation joint: \uD83C\uDF10 <#${source}> → ${language} <#${target}>.",
+            "errors": {
+              "notFound": "There is no active translation joint with the current settings. Please check </${name}:${id}>."
+            }
         },
         "list": {
           "name": "list",
           "description": "List all replicas.",
           "title": "Replicas:",
           "listItem": "${number}.  \uD83C\uDF10 <#${source}> → ${language} <#${target}>",
-          "noReplicas": "There are no replicas. Get started with </${name}:${id}>!"
+          "errors": {
+            "noReplicas": "There are no replicas. Get started with </${name}:${id}>!"
+          }
         }
       }
     }
