⬆ Improved replicas stability by handling missing permissions

--- a/src/localizations/configs/en.json
+++ b/src/localizations/configs/en.json
@@ -55,7 +55,8 @@
           "description": "List all replicas.",
           "title": "Replicas:",
           "errors": {
-            "noReplicas": "There are no replicas. Get started with </${name}:${id}>!"
+            "noReplicas": "There are no replicas. Get started with </${name}:${id}>!",
+            "cannotSendMessage": "⚠ Messages cannot be sent to the target of some replicas."
           }
         }
       }
