🗣Added the Translate and send option
To send a translation of the message in the lang of the discord server.

--- a/src/localizations/configs/en.json
+++ b/src/localizations/configs/en.json
@@ -66,6 +66,9 @@
     "translate": {
       "name": "Translate",
       "footer": "pro tip: this feature uses the language defined in your discord settings."
+    },
+    "send": {
+        "name": "Translate and send"
     }
   },
   "common": {
